# ngc_ogn

./: .gitignore  Pipfile  README.md  ngc_ogn.service  ogn_ngc.py  requierments.txt  setup.cfg
logfiles/: teiman_log.dict
ngc_ogn/: ogndb.py
