[metadata]
name = mypackage
version = 0.0.1

[options]
packages = find: # OR `find_namespaces:` if you want to use namespaces
install_requires =
    requests
    importlib-metadata; python_version < "3.8"

[options.packages.find] (always `find` even if `find_namespaces:` was used before)
# This section is optional
# Each entry in this section is optional, and if not specified, the default values are:
# `where=.`, `include=*` and `exclude=` (empty).
include=ngc_ogn*
exclude=ngc_ogn.tests*

[options.entry_points]
console_scripts =
    ngcogn = ngc_ogn.ngc_ogn:main
